<resources>
    <string name="app_name">Moonright</string>
    <string name="facebook_app_id">258569524849881</string>
    <string name="fb_login_protocol_scheme">fb258569524849881</string>
    <string name="identification">ID</string>
    <string name="password">password</string>
    <string name="password_confirm">password confirm</string>
    <string name="email">email</string>
    <string name="name">name</string>
    <string name="submit">submit</string>
    <string name="code">code</string>
    <string name="verified">verified</string>
    <string name="timer_format">%02d:%02d</string>
    <string name="title_search">작가/작품명 검색</string>
    <string name="title_activity_my_page">MyPageActivity</string>
    <string name="personal_information_agreement">수집된 개인정보(이메일 등)는 문의내용처리 및 고객불만의 해결을 위해 사용되며, 개인 정보수집 및 이용동의 거부 시, 1:1문의가 제한될 수 있습니다.</string>

    <string name="underlined_terms_and_condition"><u>약관 및 이용안내</u></string>

    <string name="password_policy">비밀번호는 8자리 이상, 영문, 숫자 혼용입니다</string>
    <string name="is_password_same">비밀번호 확인과 일치하지 않습니다</string>

    <string name="input_comment">댓글을 입력해주세요 :)</string>
    <string name="input_reply">님에게 답글을 입력해주세요 :)</string>
    <string name="contents_not_available">작품 구매 후 이용 가능합니다.</string>
</resources>
